--- a/Kamla_Raul_Lab2_HW/Pages/Authors/Delete.cshtml
+++ b/Kamla_Raul_Lab2_HW/Pages/Authors/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Kamla_Raul_Lab2_HW.Pages.Books.DeleteModel
+@model Kamla_Raul_Lab2_HW.Pages.Authors.DeleteModel
 
 @{
     ViewData["Title"] = "Delete";
@@ -9,28 +9,25 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Book</h4>
+    <h4>Author</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Book.Title)
+            @Html.DisplayNameFor(model => model.Author.FirstName)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Book.Title)
-        </dd>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Book.Price)
+            @Html.DisplayFor(model => model.Author.FirstName)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Book.PublishingDate)
+            @Html.DisplayNameFor(model => model.Author.LastName)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Book.PublishingDate)
+            @Html.DisplayFor(model => model.Author.LastName)
         </dd>
     </dl>
     
     <form method="post">
-        <input type="hidden" asp-for="Book.ID" />
+        <input type="hidden" asp-for="Author.ID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-page="./Index">Back to List</a>
     </form>
